Hided the desktop banner on mobile devices to fix the CLS issue

--- a/scss/elements/_block.scss
+++ b/scss/elements/_block.scss
@@ -369,6 +369,11 @@
 		}
 	}
 }
+@media (max-width: 480px){
+	.ps-home-banner {
+		display: none;
+	}
+}
 
 @media (max-width: 1200px) {
 	.ps-home-banner {
